Step 3. Add endpoint accepting query arguments returning list of orders
